# genes

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmd/: CMakeLists.txt
cmd/genome/: main.cpp
include/common/: basepair.h  gbuf.h  genome.h
source/common/: genome.cpp
test/: CMakeLists.txt
test/benchmark/source/: substring.cpp
test/unit/common/: basepair.cpp
